--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .title {
     color: #9E9E9E;
-    font-size: 24px;
+    /* font-size: 24px; */
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -22,3 +22,6 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+/* .skilli{
+    border: 1px solid white;
+} */
