--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,23 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-/* .skilli{
-    border: 1px solid white;
-} */
+.splide__slide:hover .splide-title {
+    display: block;
+    position: absolute;
+    font-size: larger;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.574);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: xx-large;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.splide-title {
+    display: none;
+}
