--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,101 @@ html {
 .splide-title {
     display: none;
 }
+
+#bottom-arrow {
+    position: absolute;
+    left: 50%;
+    bottom: 10%;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    height: 50px;
+    width: 30px;
+    animation: mouse 2s infinite;
+}
+
+#bottom-arrow .box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+
+}
+
+#bottom-arrow::before {
+    content: '';
+    position: absolute;
+    left: -10px;
+    top: -10px;
+    width: 40px;
+    height: 0px;
+    z-index: 9;
+    background-color: rgba(0, 0, 0, 0.789);
+    transition: all 2s;
+    animation: arrow_bottom 2s infinite;
+}
+
+#bottom-arrow .box span {
+    position: absolute;
+    top: 20%;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: #fff;
+    animation: arrow_point 2s infinite;
+}
+
+#bottom-arrow .box p {
+    position: absolute;
+    bottom: -30px;
+    animation: arrow_text 2s infinite;
+}
+
+@keyframes arrow_bottom {
+    0% {
+        height: 0px;
+    }
+
+    100% {
+        height: 60px;
+    }
+}
+
+@keyframes arrow_point {
+    10% {
+        top: 20%;
+    }
+
+    50% {
+        background-color: #fff;
+    }
+
+    70% {
+        top: 80%;
+        background-color: transparent;
+    }
+}
+
+@keyframes arrow_text {
+    70% {
+        color: rgba(40, 40, 40, 0.86);
+    }
+
+    100% {
+        color: rgba(40, 40, 40, 0.86);
+    }
+}
+
+@keyframes mouse {
+    0% {
+        bottom: 13%;
+    }
+
+    50% {
+        bottom: 10%;
+    }
+
+    100% {
+        bottom: 13%;
+    }
+}
