--- a/css/style.css
+++ b/css/style.css
@@ -48,100 +48,148 @@ html {
     display: none;
 }
 
-#bottom-arrow {
+.mous_scroll {
     position: absolute;
-    left: 50%;
-    bottom: 10%;
-    border: 2px solid #fff;
-    border-radius: 50px;
-    height: 50px;
-    width: 30px;
-    animation: mouse 2s infinite;
+    left: 0;
+    bottom: 0.5rem;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+
 }
 
-#bottom-arrow .box {
+.bottom-arrow-box {
     position: relative;
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-
+    height: 20px;
+    text-align: center !important;
 }
 
-#bottom-arrow::before {
-    content: '';
-    position: absolute;
-    left: -10px;
-    top: -10px;
-    width: 40px;
-    height: 0px;
-    z-index: 9;
-    background-color: rgba(0, 0, 0, 0.789);
-    transition: all 2s;
-    animation: arrow_bottom 2s infinite;
+@-webkit-keyframes ani-mouse {
+    0% {
+        opacity: 1;
+        top: 29%;
+    }
+
+    15% {
+        opacity: 1;
+        top: 50%;
+    }
+
+    50% {
+        opacity: 0;
+        top: 50%;
+    }
+
+    100% {
+        opacity: 0;
+        top: 29%;
+    }
 }
 
-#bottom-arrow .box span {
+@-moz-keyframes ani-mouse {
+    0% {
+        opacity: 1;
+        top: 29%;
+    }
+
+    15% {
+        opacity: 1;
+        top: 50%;
+    }
+
+    50% {
+        opacity: 0;
+        top: 50%;
+    }
+
+    100% {
+        opacity: 0;
+        top: 29%;
+    }
+}
+
+@keyframes ani-mouse {
+    0% {
+        opacity: 1;
+        top: 29%;
+    }
+
+    15% {
+        opacity: 1;
+        top: 50%;
+    }
+
+    50% {
+        opacity: 0;
+        top: 50%;
+    }
+
+    100% {
+        opacity: 0;
+        top: 29%;
+    }
+}
+
+.scroll-btn {
+    display: block;
     position: absolute;
-    top: 20%;
-    width: 5px;
-    height: 5px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.scroll-btn>*,
+.mous_scroll_text {
+    display: inline-block;
+    line-height: 18px;
+    font-size: 13px;
+    font-weight: normal;
+    color: #7f8c8d;
+    color: #ffffff;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    letter-spacing: 2px;
+}
+
+.scroll-btn>*:hover,
+.scroll-btn>*:focus,
+.scroll-btn>*.active {
+    color: #ffffff;
+}
+
+.scroll-btn>*:hover,
+.scroll-btn>*:focus,
+.scroll-btn>*:active,
+.scroll-btn>*.active {
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+}
+
+.scroll-btn .mouse {
+    position: relative;
+    display: block;
+    bottom: 3rem;
+    width: 35px;
+    height: 55px;
+    margin: 0 auto 20px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 3px solid white;
+    border-radius: 23px;
+}
+
+.scroll-btn .mouse>* {
+    position: absolute;
+    display: block;
+    top: 29%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    margin: -4px 0 0 -4px;
+    background: white;
     border-radius: 50%;
-    background-color: #fff;
-    animation: arrow_point 2s infinite;
-}
-
-#bottom-arrow .box p {
-    position: absolute;
-    bottom: -30px;
-    animation: arrow_text 2s infinite;
-}
-
-@keyframes arrow_bottom {
-    0% {
-        height: 0px;
-    }
-
-    100% {
-        height: 60px;
-    }
-}
-
-@keyframes arrow_point {
-    10% {
-        top: 20%;
-    }
-
-    50% {
-        background-color: #fff;
-    }
-
-    70% {
-        top: 80%;
-        background-color: transparent;
-    }
-}
-
-@keyframes arrow_text {
-    70% {
-        color: rgba(40, 40, 40, 0.86);
-    }
-
-    100% {
-        color: rgba(40, 40, 40, 0.86);
-    }
-}
-
-@keyframes mouse {
-    0% {
-        bottom: 13%;
-    }
-
-    50% {
-        bottom: 10%;
-    }
-
-    100% {
-        bottom: 13%;
-    }
+    -webkit-animation: ani-mouse 2.5s linear infinite;
+    -moz-animation: ani-mouse 2.5s linear infinite;
+    animation: ani-mouse 2.5s linear infinite;
 }
