--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,14 @@ html {
     align-items: center;
 }
 
-.title::before {
-    content: "<";
-}
+/* .title::before {
+    content: "#";
+    padding-right: 5px;
+} */
 
-.title::after {
+/* .title::after {
     content: ">";
-}
+} */
 
 .name {
     background: -webkit-linear-gradient(275.68deg, #3A8EE6 0%, #C03AE7 100%);
